--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,12 @@ commands =
     bash -c "unset http_proxy https_proxy HTTP_PROXY HTTPS_PROXY ; {toxinidir}/tests/test_basic.py"
     bash -c "unset http_proxy https_proxy HTTP_PROXY HTTPS_PROXY ; {toxinidir}/tests/test_cluster.py"
 
+[testenv:snap-lvm]
+commands =
+    {toxinidir}/tools/lxd_build.sh
+    flake8 {toxinidir}/tests/
+    bash -c "unset http_proxy https_proxy HTTP_PROXY HTTPS_PROXY ; {toxinidir}/tests/test_basic.py --use-lvm"
+
 [testenv:snap-try]
 # Testing environment for local debugging. Mounts rw snap from squashfs-root dir.
 commands =
