Enable libvirt daemon to listen for remote connections
Enable the libvirt daemon to listen for remote connections. This
enables the live migration of instances between nodes in a microstack
cluster. Note, this is using TCP based connections and not secured
TLS based connections. That work should be done as part of enabling
TLS everywhere.

Closes-Bug: #1925707
Change-Id: If00d825c52c2d0dd12bc652ba26f67160dc7a6c5

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -409,7 +409,7 @@ apps:
 
   # Libvirt/Qemu
   libvirtd:
-    command: usr/sbin/libvirtd --pid $SNAP_DATA/libvirt.pid
+    command: usr/sbin/libvirtd --pid $SNAP_DATA/libvirt.pid --listen
     daemon: simple
     plugs:
       - network
@@ -686,6 +686,7 @@ parts:
       - libsystemd0
       - petname
       - python3
+      - openssh-client
       - spice-html5
       - sg3-utils
       # LIO userspace dependencies
